"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Bulk of this commit is to fix big image support for the X11 client.
common/client.h: Add a couple new defines to denote how big the largest
   image may be, minimum reasonable map size for the_map structure,
   and how far off the map a head could be.
x11/png.c: Remove hard coded values of images being 32 pixels wide/high.
   Also, store away actual size of images, needed for big image stuff
   to get filled in properly.
x11/x11.c: Add an error handler to make it easier to catch bugs
   (gets real stack trace instead of the program exiting).  Fix
   up the gen_draw_face to properly draw big images, change
   call to allocate map to pass in new larger values.
x11/x11.h: Add width, height values to Pixmap data structure.
x11/xutil.c: Change the routine to recenter virtual map some - we need
   to take into account that there can be big images, so include that 
   value in when seeing if we are too close to the map edge.
MSW 2003-10-05

common/commands.c: Add call to reset_player_data() - necessarily for
    data to be sanely displayed for next time player logs in.
common/init.c: add reset_player_data - clears out skill data.
gtk/gx11.c: Add code to erase skills that current player doesn't know.
   Some alternative map drawing code also in place, but disabled.
gtk/gx11.h: Add ALTERNATE_MAP_REDRAW define.
gtk/sdl.c: Add check for ALTERNATE_MAP_REDRAW.
MSW 2003-09-12

common and gtk:
   Client understand the smoothing protocol and the gtk client is
   able to draw the smoothing information.
Tchize 2003-07-08

gtk/gx11.c: Change skill experience display - instead of skill
   name and exp/level being the same string and same table element,
   add additional columns, so the skill name is in one, the exp/level
   in another.  IMO, this makes for cleaner display, as the exp
   totals for the different skills then line up better.  Also, fix